deployment/canary-2/service-v2.yml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: consdata-tech-deployment
    name: consdata-tech-deployment-service-v2
spec:
    selector:
        app: consdata-tech-deployment
        version: v2
    ports:
        - name: http
          port: 8080
          protocol: TCP
          targetPort: 8080
