deployment/canary-2/route-canary-disable-cookies.yml
apiVersion: v1
kind: Route
metadata:
    annotations:
        haproxy.router.openshift.io/balance: roundrobin
        haproxy.router.openshift.io/disable_cookie: 'true'
    labels:
        app: consdata-tech-deployment
    name: consdata-tech-deployment
spec:
    host: consdata-tech-deployment.ib24.consdata.local
    port:
        targetPort: http
    to:
        kind: Service
        name: consdata-tech-deployment-service-v1
        weight: 30
    alternateBackends:
        - kind: Service
          name: consdata-tech-deployment-service-v2
          weight: 70

    wildcardPolicy: None
